# LebeDigital

./: .gitignore  .gitmodules  CPTO.drawio  LICENSE  README.md  conf.py  config.py  dodo.py  environment.yml  environment_sim.yml  index.rst  jsons.db  mapping_master.py  pyproject.toml  setup.cfg  setup.py  test.txt
.github/workflows/: GHPagesOntology.yml  OntologyPages.yml  calibration_tests.yml  get_ontoversion.py  knowledgeGraph_tests.yml  lebedigital.yml  lebedigital_workflow.yml  minimum_working_example.yml  openbistest.yml  python-app.yml  rawdataupload.yml  rawdataworkflow.yml  simulation_tests.yml
Datasets/Thiele/: Probekörper_aktuell_01_Auszug.xlsx
Datasets/Versuche/: Versuche.xlsx
cpto/: CompressiveStrength_KG_Template.ttl  EModuleOntology_KG_Template.drawio  EModuleOntology_KG_Template.ttl  Specimen_KG_Template.ttl
cpto/BaseOntology/: ConcreteOntology.owl  cpto.ttl
docs/: documentation.md  model.rst  motivation.rst
lebedigital/: unit_registry.py  validation.py
newest/: index-en.html  index.html  ontology.rdf  ontology.ttl
ontoMatching/: ontoSource.owl  ontoTarget.owl
tests/: conftest.py  gen_import_template.csv  gen_sample_properties.csv  general_test.py  test_cylinder_simulation.py  test_sheet.xlsx
v1.0.0/: .htaccess  index-de.html  index.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl
v1.0.1/: .htaccess  index-de.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl
web/: add_user.py  config.json  config.json.sample  config.template.json  dataset.ttl  requirements.txt  server.py  show_db.py  upload.db
(+1528 files in other folders)
