[metadata]
name = lebedigital
version = 0.0.1
author = Jörg F. Unger
author_email = joerg.unger@bam.de
description = Implementation of usecases in the PMD project LEBEDIGITAL
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license_files = LICENSE

[options]
python_requires = >= 3.7
packages = find:
where = src
include_package_data = True
install_requires =
    numpy
    scipy

[options.extras_require]
tests =
    pytest
    coverage[toml]

docs =
    sphinx >=3, <5
    sphinx-rtd-theme
    doit